<resources>
    <string name="app_name">AirbnbByStar</string>

    <!-- Naming Rules -->
    <!-- 도메인명_컴포넌트함축어_용도(=목적) -->

    <!-- Common -->
    <string name="txt_dot">•</string>
    <string name="txt_erase"><u>삭제</u></string>
    <string name="kwr">₩</string>
    <string name="txt_change"><u>수정</u></string>

    <!-- Main -->
    <string name="main_btm_nav_search_title">검색</string>
    <string name="main_btm_nav_my_page_title">로그인</string>
    <string name="main_btm_nav_store_title">저장 목록</string>
    <string name="main_btm_nav_trip_title">여행</string>
    <string name="main_btm_nav_message_title">메시지함</string>

    <!-- Home -->
    <string name="home_btn_try_get_http_method">GET API 보내기</string>
    <string name="home_btn_try_post_http_method">POST API 보내기</string>
    <string name="home_et_id">아이디를 입력하세요.</string>
    <string name="home_et_pw">비밀번호를 입력하세요.</string>

    <!-- my_page -
    <string name="my_page_tv_counter">%1d 번 눌렀습니다.</string>
    <string name="my_page_btn_counting_number">숫자 세기</string>-->

    <!--log_in -->
    <string name="log_in_title">에어비앤비 로그인/회원 가입</string>
    <string name="log_in_hint_nation_region">국가/지역</string>
    <string name="log_in_text_korea">국가/지역</string>
    <string name="log_in_hint_phone_num">전화번호</string>
    <string name="log_in_text_error">유효하지 않은 전화번호</string>
    <string name="log_in_text_notice">통화나 문자로 전화번호를 확인하겠습니다. 일반 문자 메시지 요금 및
    데이터 요금이 부과됩니다.</string>
    <string name="log_in_btn_continue">계속하기</string>
    <string name="log_in_line_or">또는</string>
    <string name="log_in_btn_email">이메일로 로그인하기</string>
    <string name="log_in_btn_kakao">카카오로 로그인하기</string>
    <string name="log_in_btn_naver">네이버로 로그인하기</string>
    <string name="log_in_text_apple">Apple로 로그인하기</string>
    <string name="log_in_regex_cell_phone">^01(?:0|1|[6-9]) - (?:\d{3}|\d{4}) - \d{4}$</string>
    <string name="log_in_regex_home_phone">^\d{2,3} - \d{3,4} - \d{4}$</string>

    <!--phone -->
    <string name="phone_text_title">전화번호 인증하기</string>
    <string name="phone_text_ask">코드를 받지 못하셨나요?</string>
    <string name="phone_text_resend"><u>다시 보내기</u></string>
    <string name="phone_text_whats"><u>왓츠앱으로 보내기</u></string>
    <string name="phone_text_call"><u>전화로 인증하기</u></string>

    <!-- input_profile -->
    <string name="input_profile_text_title">정보 입력하기</string>
    <string name="input_profile_text_notice1">정부 발급 신분증에 표시된 이름과 일치하는지 확인하세요.</string>
    <string name="input_profile_text_notice2">만 18세 이상의 성인만 회원으로 가입할 수 있습니다. 생일은 다른 에어비앤비 이용자에게 공개되지 않습니다.</string>
    <string name="input_profile_text_notice3">예약 확인 이메일이 전송됩니다.</string>
    <string name="input_profile_text_notice4">아래의 동의 및 계속하기를 누르면 에어비앤비의 <u>서비스 약관</u>, <u>결제 서비스 약관</u>, <u>개인정보 처리방침</u> 및 <u>차별 금지 정책</u>에 동의하는 것입니다.</string>
    <string name="input_profile_text_notice5">에어비앤비의 회원 전용 할인, 추천여행 정보, 마케팅 이메일, 푸시 알림을 보내드립니다. 계정 설정 또는 마케팅 알림에서 언제든지 메시지 수신을 거부할 수 있습니다.</string>
    <string name="input_profile_text_notice6">에어비앤비에서 보내는 마케팅 메시지를 받고 싶지 않습니다.</string>
    <string name="input_profile_hint_first">이름(예: 길동)</string>
    <string name="input_profile_hint_last">성(예: 홍)</string>
    <string name="input_profile_hint_birth">생일(mm/dd/yyyy)</string>
    <string name="input_profile_hint_email">이메일</string>
    <string name="input_profile_btn_continue">동의 및 계속하기</string>
    <string name="input_profile_text_email_error">이메일이 올바르지 않습니다.</string>
    <string name="input_profile_text_date_picker">생년월일 입력</string>

    <!-- main_my_page -->
    <string name="my_page_btn_text_profile">프로필 보기</string>
    <string name="my_page_text_section1">계정 관리</string>
    <string name="my_page_btn_text_section1_1">개인 정보</string>
    <string name="my_page_btn_text_section1_2">결제 및 대금 수령</string>
    <string name="my_page_btn_text_section1_3">알림</string>
    <string name="my_page_btn_text_section1_4">출장 여행</string>
    <string name="my_page_text_section2">호스팅</string>
    <string name="my_page_btn_text_section2_1">호스트 모드로 전환</string>
    <string name="my_page_btn_text_section2_2">체험 관리</string>
    <string name="my_page_text_section3">추천 및 여행 크레딧</string>
    <string name="my_page_btn_text_section3_1">친구 초대하기</string>
    <string name="my_page_btn_text_section3_1_1">초대받은 친구가 가입하면, 조건을 충족하는 예약에 대해 최대 \75,000의 할인 혜택을 받게 됩니다.</string>
    <string name="my_page_btn_text_section3_2">호스트 초대하기</string>
    <string name="my_page_btn_text_section3_2_1">호스트를 새로 추천할 때마다 \16,704의 크레딧을 받으세요.</string>
    <string name="my_page_text_section4">지원</string>
    <string name="my_page_btn_text_section4_1">에어비앤비 이용 방법</string>
    <string name="my_page_btn_text_section4_2">안전 센터</string>
    <string name="my_page_btn_text_section4_2_1">안전한 여행에 필요한 정보, 도구, 지원을 받으세요.</string>
    <string name="my_page_btn_text_section4_3">에어비앤비 이웃 민원 지원에 연락하기</string>
    <string name="my_page_btn_text_section4_3_1">거주하고 계신 지역의 홈셰어링 활동에 대한 우려 사항을 에어비앤비에 알려주세요.</string>
    <string name="my_page_btn_text_section4_4">도움 요청</string>
    <string name="my_page_btn_text_section4_5">의견 남기기</string>
    <string name="my_page_text_section5">법률</string>
    <string name="my_page_btn_text_section5_1">이용 약관</string>
    <string name="my_page_btn_text_section5_2">로그아웃</string>
    <string name="my_page_btn_text_version">버전21.05(24001306)</string>

    <!-- main_search -->
    <string name="main_search_notice"><u>에어비앤비의 코로나19 대응 방안에 대한 최신 정보를 확인하세요.</u></string>
    <string name="main_search_search_text">어디로 여행가시나요?</string>
    <string name="main_search_text1"><b>이제, 여행은 가까운 곳에서</b></string>
    <string name="main_search_tex2">근처의 숙소 둘러보기</string>
    <string name="main_search_seoul"><b>서울</b>\n차로 30분 거리</string>>
    <string name="main_search_incheon"><b>인천</b>\n차로 30분 거리</string>
    <string name="main_search_uijeongbu"><b>의정부시</b>\n차로 45분 거리</string>
    <string name="main_search_daegu"><b>대구\n차로 4시간 거리</b></string>
    <string name="main_search_daejeon"><b>대전\n차로 2.5시간 거리</b></string>
    <string name="main_search_bucheon"><b>부천시\n차로 15분 거리</b></string>

    <!-- searching_step1 -->
    <string name="searching_step1_text_search">어디로 여행가세요?</string>
    <string name="searching_step1_text_near">가까운 여행지 둘러보기</string>
    <string name="searching_step1_text_record">최근 검색 기록</string>
    <string name="searching_step1_text_popular">근처의 인기 여행지</string>
    <string name="searching_step1_text_jeju">제주시</string>
    <string name="searching_step1_text_7hour">차로 7시간 거리</string>
    <string name="searching_step1_text_sokcho">속초시</string>
    <string name="searching_step1_text_2half_hour">차로 2.5시간 거리</string>
    <string name="searching_step1_text_gang">강릉시</string>
    <string name="searching_step1_text_3hour">차로 3시간 거리</string>
    <string name="searching_step1_text_jeonju">전주시</string>
    <string name="searching_step1_text_5hour">차로 5시간 거리</string>
    <string name="searching_step1_text_busan">부산광역시</string>
    <string name="searching_step1_text_4hour">차로 4시간 거리</string>

    <!-- searching_step2 -->
    <string name="searching_step2_text_collapsing">무엇을 찾고\n계신가요?</string>
    <string name="searching_step2_text1">숙소 찾기</string>
    <string name="searching_step2_text1_1">집 전체, 개인실 등</string>
    <string name="searching_step2_text2">장기 숙박</string>
    <string name="searching_step2_text2_1">4주 이상의 편안한 숙박</string>
    <string name="searching_step2_text3">체험 찾기</string>
    <string name="searching_step2_text3_1">현지인이 호스팅하는 액티비티</string>

    <!-- searching_calendar -->
    <string name="searching_calendar_text_pick">날짜를\n선택하세요.</string>
    <string name="searching_calendar_text_erase"><u>지우기</u></string>
    <string name="searching_calendar_text_next">다음</string>

    <!-- searching_company -->
    <string name="searching_company_text_company">일행에 대해\n알려주세요.</string>
    <string name="searching_company_btn1_text1">성인</string>
    <string name="searching_company_btn1_text2">만 13세 이상</string>
    <string name="searching_company_btn2_text1">어린이</string>
    <string name="searching_company_btn2_text2">2~12세</string>
    <string name="searching_company_btn3_text1">유아</string>
    <string name="searching_company_btn3_text2">2세 미만</string>
    <string name="searching_company_text_skip"><u>건너뛰기</u></string>
    <string name="searching_company_text_search">검색</string>
    <string name="searching_company_btn_plus">+</string>
    <string name="searching_company_btn_minus">-</string>

    <!-- searching_detail -->
    <string name="searching_dtl_txt_for_fee">요금을\n확인하려면</string>
    <string name="searching_dtl_txt_reserve">예약 가능 여부 보기</string>
    <string name="searching_dtl_txt_pay">예약하기</string>
    <string name="searching_dtl_txt_no_review">여행에 차질이 없도록 최선을 다해 도와드리겠습니다. 모든 예약은 에어비앤비의 <u>게스트 환불 정책</u>에 따라 보호받습니다.</string>
    <string name="searching_dtl_txt_property0">집 전체</string>
    <string name="searching_dtl_txt_property0_1">공동주택 전체를 단독으로 사용하시게 됩니다.</string>
    <string name="searching_dtl_txt_property1">청결 강화</string>
    <string name="searching_dtl_txt_property1_1">에어비앤비의 강화된 5단계 청소 절차를 준수하겠다고 동의한 호스트입니다. <b><u>자세히 알아보기</u></b></string>
    <string name="searching_dtl_txt_property2">셀프 체크인</string>
    <string name="searching_dtl_txt_property2_1">키패드를 이용해 체크인하세요.</string>
    <string name="searching_dtl_txt_property3">체크인 5일 전까지 수수료 없이 취소 가능</string>
    <string name="searching_dtl_txt_property3_1">그 이후로는 체크인 전에 취소하면 첫 1박 요금과 서비스 수수료를 제외하고 50%가 환불됩니다.</string>
    <string name="searching_dtl_txt_property4">숙소 이용규칙</string>
    <string name="searching_dtl_txt_property4_1"><b><u>세부 정보 보기</u></b></string>
    <string name="searching_dtl_txt_extra_reg">추가 이용규칙</string>
    <string name="searching_dtl_btn_more_info"><u>더 보기</u></string>

    <!--searching_review -->
    <string name="searching_review_toolbar_back_title">뒤로가기</string>
    <string name="searching_review_toolbar_search_title">검색</string>

    <!--detail_calendar -->
    <string name="dtl_calendar_btn_erase">삭제</string>
    <string name="dtl_calendar_txt_choose">날짜 선택</string>
    <string name="dtl_calendar_txt_check">여행 날짜를 입력하여 정확한 요금을 확인하세요.</string>
    <string name="dtl_calendar_txt_input">요금을 확인하려면 날짜를\n입력하세요.</string>
    <string name="dtl_calendar_btn_save">저장</string>

    <!-- searching_pay -->
    <string name="_18_3_00_pm_1">월 18일 3:00 PM 전에 예약을 취소하면 첫 1박 요금 및 서비스 수수료를 제외한 요금 전액이 환불됩니다. <u>자세히 알아보기</u></string>
    <string name="_19"><b>호스트가 제공하는 환불 정책이 내게 적합한지 확인하세요.</b> 코로나19와 같이 이미 알려진 사건 또는 일반적인 악천후와 같이 예측 가능한 사건으로 인한 여행 장애는 에어비앤비의 정상참작이 가능한 상황 정책의 적용 대상이 아닐 수 있습니다. <u>자세히 알아보기</u></string>

    <!-- searching_car -->
    <string name="card_btn_cancel"><u>취소</u></string>
    <string name="card_btn_confirm">완료</string>
    <string name="card_txt_title">카드 상세정보 추가하기</string>
    <string name="card_txt_hint1">카드 번호</string>
    <string name="card_txt_hint2">유효 기간</string>
    <string name="card_txt_hint3">CVV</string>
    <string name="card_txt_hint4">우편번호</string>
    <string name="card_txt_hint5">국가/지역</string>

    <!-- recycler_view_folder_item -->
    <string name="store_txt_title">저장 목록</string>
    <string name="store_reclr_txt_dates">항상</string>

    <!-- recylcer_view_trip_item-->
    <string name="trip_recycler_txt_more">여행 계획 더 보기</string>
    <string name="trip_txt_tab0">예정된 예약</string>
    <string name="trip_txt_tab1">이전 예약</string>

    <!-- on_store_btm_fragment -->
    <string name="on_store_txt_new"><u>새로운 목록 만들기</u></string>
</resources>
