<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteForBackground"
    tools:context=".src.logIn.phone.PhoneActivity"
    android:paddingVertical="@dimen/activity_vertical_margin"
    android:paddingHorizontal="@dimen/log_in_activity_horizontal_padding">

    <ImageButton
        android:id="@+id/phone_btn_back"
        android:layout_width="36dp"
        android:layout_height="26dp"
        android:background="@color/whiteForBackground"
        android:scaleType="fitStart"
        android:src="@drawable/arrow_back_black_24dp"
        android:tint="@color/blackForLogInClearBtn"
        app:layout_constraintBottom_toTopOf="@id/phone_text_title"
        app:layout_constraintHeight_percent="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.1" />

    <TextView
        android:id="@+id/phone_text_title"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="start|center_vertical"
        android:text="@string/phone_text_title"
        android:textColor="@color/blackForText"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_btn_back" />

    <TextView
        android:id="@+id/phone_text_guide1"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        style="@style/PhoneInputNumStyle"
        android:maxLines="2"
        android:text="문자 메시지를 통해 011-376-4817번으로 보내드린 코드를 입력하세요."
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone_text_title" />

    <LinearLayout
        android:id="@+id/phone_layout_input_num"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:weightSum="1.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_text_guide1"
        app:layout_constraintBottom_toTopOf="@id/phone_btn_resend">


        <EditText
            android:id="@+id/phone_text_input_num0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.21"
            android:nextFocusForward="@+id/phone_text_input_num1"
            style="@style/PhoneEditTextStyle"
            android:enabled="true"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.06"
            android:background="@color/whiteForBackground" />

        <EditText
            android:id="@+id/phone_text_input_num1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.21"
            style="@style/PhoneEditTextStyle"
            android:enabled="false"
            android:nextFocusForward="@+id/phone_text_input_num2" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.06"
            android:background="@color/whiteForBackground" />

        <EditText
            android:id="@+id/phone_text_input_num2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.21"
            android:nextFocusForward="@+id/phone_text_input_num3"
            style="@style/PhoneEditTextStyle"
            android:enabled="false"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.06"
            android:background="@color/whiteForBackground" />

        <EditText
            android:id="@+id/phone_text_input_num3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.21"
            style="@style/PhoneEditTextStyle"
            android:enabled="false" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/phone_btn_resend"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:layout_marginTop="27dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_layout_input_num">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/phone_text_ask"
            android:layout_marginEnd="8dp"
            style="@style/PhoneTextStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_text_resend"
            android:textStyle="bold"
            style="@style/PhoneTextStyle"/>
    </LinearLayout>

    <TextView
        android:id="@+id/phone_text_view1"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:text="@string/phone_text_whats"
        android:textStyle="bold"
        style="@style/PhoneTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_btn_resend"/>

    <TextView
        android:id="@+id/phone_text_view2"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:text="@string/phone_text_call"
        android:textStyle="bold"
        style="@style/PhoneTextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_text_view1" />


</androidx.constraintlayout.widget.ConstraintLayout>
